<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp"
    android:background="#FFFFFF"
    tools:context=".rejestracja">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zarejestruj"
            android:gravity="center"
            android:textSize="20sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="1dp"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                android:inputType="textEmailAddress"
                android:padding="18dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="1dp"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/haslo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/has_o"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:padding="18dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </ProgressBar>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zarejestruj"
            android:backgroundTint="#4AB6FC"
            android:textColor="@color/white"
            android:padding="18dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:id="@+id/rejestracja_btn"/>

        <TextView
            android:id="@+id/gotologowanie"
            android:text="@string/zaloguj_si"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>





    </LinearLayout>
</RelativeLayout>